# SvrBase

./: .gitignore  Makefile  README.md  SvrBase.sdf
SvrBase/: .CMakeLists.txt.swp  CMakeLists.txt  ReadMe.txt  SvrBase.vcxproj  SvrBase.vcxproj.filters  stdafx.cpp
SvrBase/base/: Makefile
SvrBase/base/include/: CLogmanager.h  CMutex.h  CThread.h  CoreMgr.h  EventMgr.h  GuidTool.h  LocalDefine.h  RandTool.h  RcObject.h  common.h  singleton.h  util.h
SvrBase/base/src/: CLogmanager.cpp  CMutex.cpp  CThread.cpp  CoreMgr.cpp  EventMgr.cpp  GuidTool.cpp  Idle.cpp  RcObject.cpp  util.cpp
SvrBase/cfg/include/: ConfMgr.h  GpuParamConf.h  JsonReadHandler.h  JsonTool.h  ServerParamConf.h  rapidjsoninc.h
SvrBase/cfg/src/: ConfMgr.cpp  Config.cpp  GpuParamConf.cpp  JsonReadHandler.cpp  JsonTool.cpp  ServerParamConf.cpp
SvrBase/libuv/include/: UvFile.h  UvMutex.h  UvNetBase.h  UvPipeCli.h  UvPipeSvr.h  UvSem.h  UvTaskPool.h  UvTaskThread.h  UvTcpCli.h  UvTcpSvr.h  UvUdp.h  uvdefine.h
SvrBase/libuv/src/: UvBarrier.cpp  UvBase.cpp  UvFile.cpp  UvLoop.cpp  UvLoopMgr.cpp  UvMutex.cpp  UvNetBase.cpp  UvPipeBase.cpp  UvPipeCli.cpp  UvPipeSvr.cpp  UvSem.cpp  UvTaskPool.cpp  UvTaskThread.cpp  UvTcpCli.cpp  UvTcpSvr.cpp  UvThread.cpp  UvUdp.cpp
SvrBase/openssl/include/: OpensslBase64.h  OpensslSha.h  opensslinc.h
SvrBase/openssl/src/: OpensslBase64.cpp
svrbase/: Makefile  (+4 more)
svrbase/SvrBase/: CMakeLists.txt  SvrBase.cpp  SvrBase.vcxproj  SvrBase.vcxproj.filters  libuv.tgz  stdafx.h  targetver.h
svrbase/SvrBase/base/include/: CLogmanager.h  CThread.h  CoreMgr.h  EventMgr.h  Idle.h  LocalDefine.h  Log.h  MemBuffer.h  MemMgr.h  MemOper.h  Mutex.h  RcBuffer.h  RcObject.h  Task.h  common.h  singleton.h  util.h
svrbase/SvrBase/base/src/: CLogmanager.cpp  CMutex.cpp  CThread.cpp  EventMgr.cpp  Idle.cpp  Log.cpp  MemBuffer.cpp  MemMgr.cpp  MemOper.cpp  RandTool.cpp  RcBuffer.cpp  RcObject.cpp  util.cpp
svrbase/SvrBase/cfg/include/: Config.h  JsonReadHandler.h  confdef.h
svrbase/SvrBase/cfg/src/: Config.cpp
(+65 files in other folders)
